[gd_scene load_steps=22 format=3 uid="uid://cr1x2faerkd6m"]

[ext_resource type="Script" uid="uid://dq5pnm62d84ry" path="res://src/Actors/Ai/AI.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://do2dopietdkne" path="res://src/Actors/Ai/skin/Ai.png" id="2"]
[ext_resource type="AudioStream" uid="uid://bgrni6oedeesh" path="res://assets/Sfx/Blub_04.wav" id="3"]
[ext_resource type="Texture2D" uid="uid://dw500y7338i3c" path="res://src/Actors/Ai/Speech Bubbles/jump.png" id="4"]
[ext_resource type="Texture2D" uid="uid://daes4ltjnjn3u" path="res://src/Actors/Ai/Speech Bubbles/Swim.png" id="5"]
[ext_resource type="Texture2D" uid="uid://cjjm3jmw85rys" path="res://src/Actors/Ai/Speech Bubbles/Bored.png" id="6"]
[ext_resource type="Texture2D" uid="uid://c4giki1pg4qqn" path="res://src/Actors/Ai/Speech Bubbles/Drown.png" id="7"]

[sub_resource type="CircleShape2D" id="1"]
radius = 32.0156

[sub_resource type="Animation" id="2"]
resource_name = "Idle"
length = 3.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95, 2, 2.05, 2.1, 2.15, 2.2, 2.25, 2.3, 2.35, 2.4, 2.45, 2.5, 2.55, 2.6, 2.65, 2.7, 2.75, 2.8, 2.85, 2.9, 2.95, 3, 3.05, 3.1, 3.15, 3.2, 3.25, 3.3, 3.35, 3.4, 3.45, 3.5, 3.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71]
}

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="4"]
resource_name = "land"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [73, 74, 75, 76, 77, 78, 79, 80, 81]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7momy"]
_data = {
&"Idle": SubResource("2"),
&"RESET": SubResource("3"),
&"land": SubResource("4")
}

[sub_resource type="Animation" id="10"]
resource_name = "Hit"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.854902, 0.396078, 1), Color(1, 1, 1, 1), Color(1, 0.854902, 0.396078, 1), Color(1, 1, 1, 1), Color(0.321569, 0.933333, 1, 1), Color(1, 1, 1, 1), Color(1, 0.854902, 0.396078, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -7), Vector2(3, -7), Vector2(-9, -7), Vector2(4, -7), Vector2(-1, -7), Vector2(0, -7)]
}

[sub_resource type="Animation" id="11"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.854902, 0.396078, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eguij"]
_data = {
&"Hit": SubResource("10"),
&"RESET": SubResource("11")
}

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="8"]
resource_name = "open_bored"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Jump:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6")]
}

[sub_resource type="Animation" id="9"]
resource_name = "open_drown"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Jump:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="6"]
resource_name = "open_jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Jump:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4")]
}

[sub_resource type="Animation" id="7"]
resource_name = "open_swim"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Jump:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_63nbl"]
_data = {
&"RESET": SubResource("5"),
&"open_bored": SubResource("8"),
&"open_drown": SubResource("9"),
&"open_jump": SubResource("6"),
&"open_swim": SubResource("7")
}

[node name="AI" type="CharacterBody2D" groups=["Ai"]]
collision_layer = 2
script = ExtResource("1")
speed = 350
jump_speed = -900

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 0.854902, 0.396078, 1)
position = Vector2(0, -7)
texture = ExtResource("2")
hframes = 12
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Sensors" type="Node2D" parent="."]
position = Vector2(-5, 0)

[node name="ObstacleAhed" type="RayCast2D" parent="Sensors"]
unique_name_in_owner = true
position = Vector2(5, 0)
rotation = -1.5708
target_position = Vector2(-0.000184619, 51)

[node name="BehindDetector" type="RayCast2D" parent="Sensors"]
unique_name_in_owner = true
rotation = -1.5708
target_position = Vector2(60.0002, -41.9998)

[node name="BelowDetector" type="RayCast2D" parent="Sensors"]
unique_name_in_owner = true
position = Vector2(34, -1)
rotation = 0.121198
target_position = Vector2(95.8175, 216)
collision_mask = 9

[node name="FloorDetector" type="RayCast2D" parent="Sensors"]
unique_name_in_owner = true
position = Vector2(5, 0)
rotation = 0.564885
target_position = Vector2(125.944, 120.263)

[node name="DrownDetector" type="RayCast2D" parent="Sensors"]
unique_name_in_owner = true
position = Vector2(5, 0)
target_position = Vector2(0, 41)
collision_mask = 5

[node name="JumpDetector" type="Node2D" parent="Sensors"]
unique_name_in_owner = true
position = Vector2(35, 0)

[node name="RayCast2D" type="RayCast2D" parent="Sensors/JumpDetector"]
target_position = Vector2(253, -97)

[node name="RayCast2D4" type="RayCast2D" parent="Sensors/JumpDetector"]
rotation = 0.174844
target_position = Vector2(255.101, -90.7598)

[node name="RayCast2D3" type="RayCast2D" parent="Sensors/JumpDetector"]
rotation = 0.338532
target_position = Vector2(255.619, -89.9999)

[node name="RayCast2D5" type="RayCast2D" parent="Sensors/JumpDetector"]
rotation = 0.491473
target_position = Vector2(265.637, -84.3439)

[node name="RayCast2D2" type="RayCast2D" parent="Sensors/JumpDetector"]
rotation = 0.651464
target_position = Vector2(271.054, -94.7614)

[node name="TextDecider" type="Node2D" parent="Sensors"]

[node name="TellJump" type="RayCast2D" parent="Sensors/TextDecider"]
unique_name_in_owner = true
position = Vector2(5, -66)
rotation = -1.57079
target_position = Vector2(0.000312805, 50)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7momy")
}

[node name="HitFlash" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_eguij")
}

[node name="bounce" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")

[node name="SmallTimeTurn" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="bored" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="DamageInterval" type="Timer" parent="."]
one_shot = true

[node name="Speech" type="Node2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.905882)
position = Vector2(1.19209e-07, -29)

[node name="Jump" type="Sprite2D" parent="Speech"]
position = Vector2(2, -49.6454)
texture = ExtResource("7")

[node name="SpeechAnim" type="AnimationPlayer" parent="Speech"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_63nbl")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="SmallTimeTurn" to="." method="_on_SmallTimeTurn_timeout"]
[connection signal="timeout" from="bored" to="." method="_on_bored_timeout"]
